# control_project

./: CMakeLists.txt  README.md  package.xml
config/: arm.yaml  gripper.yaml
gripper_control/: CMakeLists.txt  package.xml
gripper_sym/launch/: gripper.launch
gripper_sym/models/gripper_model/: gripper.sdf  model.config
gripper_sym/worlds/: gripper.world  gripper_.world
include/r2_robot/: mpc_controller.h  pid_controller.h  pid_velocity_controller.h
launch/: 12-gripper.launch  gazebo.launch  gripper.launch  r2d2.launch
libs/: pid_controller.cpp
models/box_model/: model.config  model.sdf
models/gripper_model/: model.config  model.sdf
models/r2d2/: model.config
models/r2d2/sdf/: r2d2.sdf
models/simple_gripper/: model.config
models/simple_gripper/sdf/: simple_gripper.sdf
plugins/: psudo_sensor_plugin.cpp  r2_arm_plugin.cpp  r2_gripper_plugin.cpp  touch_sensor_plugin.cpp
plugins/r2d2_arm/: CMakeLists.txt  r2d2_arm_plugin.cc  r2d2_arm_plugin.cpp
plugins/r2d2_arm/include/: pid_controller.h
plugins/r2d2_gripper/: CMakeLists.txt  r2d2_gripper_plugin.cpp
plugins/r2d2_gripper/include/: pid_controller.h
plugins/r2d2_sudo_sensor/: CMakeLists.txt  r2d2_sudo_sensor_plugin.cpp
plugins/simple_gripper/: CMakeLists.txt  simple_gripper.cc
rqt/: r2d2.perspective
rviz/: r2d2.rviz
src/: gripper_controller.cpp  main.cpp  main_.cpp  pid_controller.cpp  r2_robot_node.cpp  r2d2_controller.cpp
urdf/: 12-gripper.urdf.xacro  13-diffdrive.urdf.xacro  r2d2.urdf.xacro
world/: r2d2.world
worlds/: default_gripper.world  r2d2_obj.world  simple_gripper.world
