<?xml version="1.0"?>
<package format="2">
  <name>r2d2</name>
  <version>0.4.0</version>
  <description>robot simulation for implementing a gripper controller</description>
  <author email="shindler25@gmail.com">Nicholas Shindler</author>
  <!-- creators of the R2D2 symulation -->
  <author email="davidvlu@gmail.com">David V. Lu!!</author>
  <author email="paul@bovbel.com">Paul Bovbel</author>

  <maintainer email="shindler25@gmail.com">Nicholas Shindler</maintainer>

  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>

  <!-- build depends -->
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>

  <!-- execution dependencies -->
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>diff_drive_controller</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_ros_control</exec_depend>
  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>position_controllers</exec_depend>
  <exec_depend>effort_controllers</exec_depend>
  <exec_depend>velocity_controllers</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rqt_robot_steering</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>rqt</exec_depend>
  <exec_depend>urdf_tutorial</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>

</package>
